walkthrough texts refactor and transaltion on other languages

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -312,13 +312,83 @@
   "navMyDog": "كلبي",
   "doghousesTitle": "بيوت الكلاب",
   "navProfile": "الملف الشخصي",
+  "walkthrough": {
+    "ui": {
+      "levelUp": "ارتقاء المستوى!",
+      "plusOneSkillPoint": "+1 نقطة مهارة",
+      "place": "مكان",
+      "healX3": "شفاء ×3",
+      "attackX3": "هجوم ×3",
+      "addDoghouse": "إضافة بيت كلب",
+      "energyUsedAttackHeal": "-2 طاقة مستخدمة للهجوم • -1 للشفاء",
+      "energyPerDay": "+1 طاقة/يوم لكل بيت كلب تملكه",
+      "questPlaceDoghouse": "ضع بيت كلب واحد",
+      "questAttackEnemy": "هاجم بيت كلب عدو",
+      "questHealOwn": "اشفِ بيت كلبك",
+      "premiumTitle": "بريميوم",
+      "premiumFeatures": "أيقونات كلاب بريميوم • إعادة تسمية غير محدودة",
+      "buy": "شراء",
+      "extraDoghouse": "بيت كلب إضافي",
+      "renameToken": "رمز إعادة التسمية",
+      "repairPack": "حزمة إصلاح",
+      "snacks": "وجبات خفيفة"
+    },
+    "steps": {
+      "gainingExperience": {
+        "title": "كسب الخبرة",
+        "desc": "ضع بيوت الكلاب الخاصة بك وهاجم بيوت العدو للحصول على نقاط الخبرة. ارتقِ في المستوى لجعل كلبك أقوى.",
+        "hint": "للحصول على أفضل النتائج، قم بتشغيل نظام تحديد المواقع العالمي (GPS). ضع بيوت الكلاب بعيدًا عن الآخرين.",
+        "howto": [
+          "اضغط على أيقونة بيت الكلب لوضع واحد في مكانك.",
+          "اضغط على بيت كلب عدو لمهاجمته.",
+          "اضغط على بيت الكلب الخاص بك لشفائه.",
+          "عندما ترتقي في المستوى، طالب بمكافآتك وخصص نقاط المهارة في عرض الكلب."
+        ]
+      },
+      "energyMechanics": {
+        "title": "الطاقة",
+        "desc": "تحتاج إلى طاقة للهجوم والشفاء. يتم إعادة ملء طاقتك كل يوم، وكلما زاد عدد بيوت الكلاب لديك، زادت الطاقة التي تحصل عليها.",
+        "hint": "المزيد من بيوت الكلاب = المزيد من الطاقة. استخدمها بحكمة.",
+        "howto": [
+          "شاهد طاقتك في الزاوية العلوية اليمنى.",
+          "يستهلك كل من الهجوم والشفاء الطاقة.",
+          "ابنِ المزيد من بيوت الكلاب للحصول على المزيد من الطاقة كل يوم."
+        ]
+      },
+      "dailyQuests": {
+        "title": "المهام ولوحات الصدارة",
+        "desc": "أكمل المهام اليومية للحصول على مكافآت. اصعد في لوحات الصدارة وشاهد ترتيبك ضد اللاعبين الآخرين.",
+        "hint": "سجل الدخول كل يوم للقيام بمهامك والحفاظ على ترتيبك.",
+        "howto": [
+          "اذهب إلى علامة تبويب المهام اليومية لرؤية مهامك والحصول على مكافآتك.",
+          "اذهب إلى لوحات الصدارة لمعرفة ترتيبك."
+        ]
+      },
+      "premiumShop": {
+        "title": "بريميوم ومتجر",
+        "desc": "مع بريميوم، تحصل على أيقونات كلاب رائعة وإعادة تسمية غير محدودة. في المتجر، يمكنك استخدام الوجبات الخفيفة لشراء المزيد من بيوت الكلاب وإعادة التسمية والإصلاحات.",
+        "hint": "بريميوم للمظهر، والوجبات الخفيفة تساعدك على التقدم بشكل أسرع.",
+        "howto": [
+          "اذهب إلى المتجر لرؤية ما هو معروض للبيع.",
+          "اشترِ بريميوم للحصول على أيقونات حصرية وإعادة تسمية غير محدودة.",
+          "اشترِ وجبات خفيفة للحصول على المزيد من بيوت الكلاب وإعادة التسمية والإصلاحات."
+        ]
+      }
+    },
+    "buttons": {
+      "back": "رجوع",
+      "next": "التالي",
+      "done": "تم",
+      "close": "إغلاق"
+    }
+  },
   "signIn": {
-    "heroEyebrow": "Join the pack",
-    "heroHeadline": "Lead your dog to victory",
-    "heroSubtitle": "Sign in to launch raids, repair doghouses, and climb the leaderboards.",
-    "featureExplore": "Explore the shared world map",
-    "featureBuild": "Build and defend doghouses",
-    "featureCompete": "Compete on daily quests",
-    "secondaryHint": "You can switch accounts later from the profile menu."
+    "heroEyebrow": "انضم إلى القطيع",
+    "heroHeadline": "قد كلبك إلى النصر",
+    "heroSubtitle": "سجل الدخول لشن غارات وإصلاح بيوت الكلاب والصعود في لوحات الصدارة.",
+    "featureExplore": "استكشف خريطة العالم المشتركة",
+    "featureBuild": "ابنِ ودافع عن بيوت الكلاب",
+    "featureCompete": "تنافس في المهام اليومية",
+    "secondaryHint": "يمكنك تبديل الحسابات لاحقًا من قائمة الملف الشخصي."
   }
 }
