--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -227,7 +227,7 @@
   "stamina": " सहनशक्ति",
   "reach": " নাগাল",
   "fortification": " দুর্গ",
-  "attackLabel": "আക്രമণ: {min}–{max}",
+  "attackLabel": "আক্রমণ: {min}–{max}",
   "maxEnergyLabel": "সর্বোচ্চ শক্তি {n}",
   "rangeLabel": "পরিসীমা {n}m",
   "doghouseHpLabel": "ডগহাউস এইচপি {n}",
@@ -312,6 +312,76 @@
   "navMyDog": "আমার কুকুর",
   "doghousesTitle": "ডগহাউস",
   "navProfile": "প্রোফাইল",
+  "walkthrough": {
+    "ui": {
+      "levelUp": "স্তর আপ!",
+      "plusOneSkillPoint": "+1 দক্ষতা পয়েন্ট",
+      "place": "স্থান",
+      "healX3": "নিরাময় ×3",
+      "attackX3": "আক্রমণ ×3",
+      "addDoghouse": "কুকুর ঘর যোগ করুন",
+      "energyUsedAttackHeal": "-2 শক্তি আক্রমণের জন্য ব্যবহৃত • -1 নিরাময়ের জন্য",
+      "energyPerDay": "আপনার মালিকানাধীন প্রতিটি কুকুর ঘরের জন্য প্রতিদিন +1 শক্তি",
+      "questPlaceDoghouse": "1টি কুকুর ঘর রাখুন",
+      "questAttackEnemy": "একটি শত্রু কুকুর ঘর আক্রমণ করুন",
+      "questHealOwn": "আপনার নিজের কুকুর ঘর নিরাময় করুন",
+      "premiumTitle": "প্রিমিয়াম",
+      "premiumFeatures": "প্রিমিয়াম কুকুর আইকন • সীমাহীন নাম পরিবর্তন",
+      "buy": "কিনুন",
+      "extraDoghouse": "অতিরিক্ত কুকুর ঘর",
+      "renameToken": "টোকেন পুনঃনামকরণ",
+      "repairPack": "মেরামত প্যাক",
+      "snacks": "স্ন্যাকস"
+    },
+    "steps": {
+      "gainingExperience": {
+        "title": "এক্সপি অর্জন",
+        "desc": "আপনার নিজের কুকুর ঘর স্থাপন করে এবং শত্রু কুকুর ঘর আক্রমণ করে এক্সপি অর্জন করুন। আপনার কুকুরকে শক্তিশালী করতে স্তর আপ করুন।",
+        "hint": "সেরা ফলাফলের জন্য, আপনার জিপিএস চালু করুন। অন্যদের থেকে দূরে কুকুর ঘর স্থাপন করুন।",
+        "howto": [
+          "আপনার অবস্থানে একটি কুকুর ঘর স্থাপন করতে কুকুর ঘর আইকনে আলতো চাপুন।",
+          "একটি শত্রু কুকুর ঘর আক্রমণ করতে সেটিতে আলতো চাপুন।",
+          "আপনার নিজের কুকুর ঘর নিরাময় করতে সেটিতে আলতো চাপুন।",
+          "স্তর আপ করার পরে, আপনার পুরস্কার দাবি করুন এবং কুকুর ভিউতে দক্ষতা পয়েন্ট বরাদ্দ করুন।"
+        ]
+      },
+      "energyMechanics": {
+        "title": "শক্তি",
+        "desc": "আক্রমণ এবং নিরাময়ের জন্য আপনার শক্তি প্রয়োজন। আপনার শক্তি প্রতিদিন পুনরায় পূরণ হয়, এবং আপনার যত বেশি কুকুর ঘর থাকবে, তত বেশি শক্তি আপনি পাবেন।",
+        "hint": "বেশি কুকুর ঘর = বেশি শক্তি। এটি বুদ্ধিমানের সাথে ব্যবহার করুন।",
+        "howto": [
+          "উপরের-ডান কোণায় আপনার শক্তি দেখুন।",
+          "আক্রমণ এবং নিরাময় উভয়ই শক্তি ব্যবহার করে।",
+          "প্রতিদিন আরও শক্তি পেতে আরও কুকুর ঘর তৈরি করুন।"
+        ]
+      },
+      "dailyQuests": {
+        "title": "অনুসন্ধান এবং লিডারবোর্ড",
+        "desc": "পুরস্কার পেতে দৈনিক অনুসন্ধানগুলি সম্পূর্ণ করুন। লিডারবোর্ডে আরোহণ করুন এবং দেখুন আপনি অন্যান্য খেলোয়াড়দের বিরুদ্ধে কীভাবে স্থান পান।",
+        "hint": "আপনার অনুসন্ধানগুলি করতে এবং আপনার পদমর্যাদা বজায় রাখতে প্রতিদিন লগ ইন করুন।",
+        "howto": [
+          "আপনার কাজগুলি দেখতে এবং আপনার পুরস্কার পেতে দৈনিক অনুসন্ধান ট্যাবে যান।",
+          "আপনি কীভাবে স্থান পান তা দেখতে লিডারবোর্ডে যান।"
+        ]
+      },
+      "premiumShop": {
+        "title": "প্রিমিয়াম এবং দোকান",
+        "desc": "প্রিমিয়ামের সাথে, আপনি দুর্দান্ত কুকুর আইকন এবং সীমাহীন নাম পরিবর্তন পান। দোকানে, আপনি আরও কুকুর ঘর, নাম পরিবর্তন এবং মেরামত কিনতে স্ন্যাকস ব্যবহার করতে পারেন।",
+        "hint": "প্রিমিয়াম চেহারার জন্য, এবং স্ন্যাকস আপনাকে দ্রুত অগ্রগতি করতে সহায়তা করে।",
+        "howto": [
+          "বিক্রয়ের জন্য কী আছে তা দেখতে দোকানে যান।",
+          "একচেটিয়া আইকন এবং সীমাহীন নাম পরিবর্তন পেতে প্রিমিয়াম কিনুন।",
+          "আরও কুকুর ঘর, নাম পরিবর্তন এবং মেরামত পেতে স্ন্যাকস কিনুন।"
+        ]
+      }
+    },
+    "buttons": {
+      "back": "পিছনে",
+      "next": "পরবর্তী",
+      "done": "সম্পন্ন",
+      "close": "বন্ধ"
+    }
+  },
   "signIn": {
     "heroEyebrow": "Join the pack",
     "heroHeadline": "Lead your dog to victory",
