--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -316,6 +316,76 @@
   "navMyDog": "मेरा कुत्ता",
   "doghousesTitle": "डॉगहाउस",
   "navProfile": "प्रोफ़ाइल",
+  "walkthrough": {
+    "ui": {
+      "levelUp": "स्तर ऊपर!",
+      "plusOneSkillPoint": "+1 कौशल बिंदु",
+      "place": "स्थान",
+      "healX3": "ठीक करें ×3",
+      "attackX3": "हमला ×3",
+      "addDoghouse": "डॉगहाउस जोड़ें",
+      "energyUsedAttackHeal": "-2 ऊर्जा हमले के लिए उपयोग की गई • -1 ठीक करने के लिए",
+      "energyPerDay": "आपके स्वामित्व वाले प्रत्येक डॉगहाउस के लिए प्रति दिन +1 ऊर्जा",
+      "questPlaceDoghouse": "1 डॉगहाउस रखें",
+      "questAttackEnemy": "एक दुश्मन डॉगहाउस पर हमला करें",
+      "questHealOwn": "अपने खुद के डॉगहाउस को ठीक करें",
+      "premiumTitle": "प्रीमियम",
+      "premiumFeatures": "प्रीमियम डॉग आइकन • असीमित नाम बदलना",
+      "buy": "खरीदें",
+      "extraDoghouse": "अतिरिक्त डॉगहाउस",
+      "renameToken": "नाम बदलने का टोकन",
+      "repairPack": "मरम्मत पैक",
+      "snacks": "स्नैक्स"
+    },
+    "steps": {
+      "gainingExperience": {
+        "title": "XP प्राप्त करना",
+        "desc": "XP प्राप्त करने के लिए अपने डॉगहाउस रखें और दुश्मन के डॉगहाउस पर हमला करें। अपने कुत्ते को मजबूत बनाने के लिए स्तर बढ़ाएँ।",
+        "hint": "सर्वोत्तम परिणामों के लिए, अपना GPS चालू करें। डॉगहाउस को दूसरों से दूर रखें।",
+        "howto": [
+          "आप जहां हैं वहां एक डॉगहाउस रखने के लिए डॉगहाउस आइकन पर टैप करें।",
+          "उस पर हमला करने के लिए एक दुश्मन डॉगहाउस पर टैप करें।",
+          "उसे ठीक करने के लिए अपने खुद के डॉगहाउस पर टैप करें।",
+          "जब आप स्तर बढ़ाते हैं, तो अपने पुरस्कारों का दावा करें और डॉग व्यू में कौशल अंक निर्दिष्ट करें।"
+        ]
+      },
+      "energyMechanics": {
+        "title": "ऊर्जा",
+        "desc": "आपको हमला करने और ठीक करने के लिए ऊर्जा की आवश्यकता है। आपकी ऊर्जा हर दिन फिर से भर जाती है, और आपके पास जितने अधिक डॉगहाउस होते हैं, उतनी ही अधिक ऊर्जा आपको मिलती है।",
+        "hint": "अधिक डॉगहाउस = अधिक ऊर्जा। इसका बुद्धिमानी से उपयोग करें।",
+        "howto": [
+          "ऊपरी-दाएं कोने में अपनी ऊर्जा देखें।",
+          "हमला करना और ठीक करना दोनों ऊर्जा का उपयोग करते हैं।",
+          "हर दिन अधिक ऊर्जा प्राप्त करने के लिए अधिक डॉगहाउस बनाएं।"
+        ]
+      },
+      "dailyQuests": {
+        "title": "खोज और लीडरबोर्ड",
+        "desc": "पुरस्कार पाने के लिए दैनिक खोज पूरी करें। लीडरबोर्ड पर चढ़ें और देखें कि आप अन्य खिलाड़ियों के मुकाबले कैसे रैंक करते हैं।",
+        "hint": "अपनी खोज करने और अपनी रैंक बनाए रखने के लिए हर दिन लॉग इन करें।",
+        "howto": [
+          "अपने कार्यों को देखने और अपने पुरस्कार प्राप्त करने के लिए दैनिक खोज टैब पर जाएं।",
+          "आप कैसे रैंक करते हैं यह देखने के लिए लीडरबोर्ड पर जाएं।"
+        ]
+      },
+      "premiumShop": {
+        "title": "प्रीमियम और दुकान",
+        "desc": "प्रीमियम के साथ, आपको शानदार डॉग आइकन और असीमित नाम बदलने की सुविधा मिलती है। दुकान में, आप अधिक डॉगहाउस, नाम बदलने और मरम्मत खरीदने के लिए स्नैक्स का उपयोग कर सकते हैं।",
+        "hint": "प्रीमियम दिखने के लिए है, और स्नैक्स आपको तेजी से प्रगति करने में मदद करते हैं।",
+        "howto": [
+          "बिक्री के लिए क्या है यह देखने के लिए दुकान पर जाएं।",
+          "विशेष आइकन और असीमित नाम बदलने के लिए प्रीमियम खरीदें।",
+          "अधिक डॉगहाउस, नाम बदलने और मरम्मत प्राप्त करने के लिए स्नैक्स खरीदें।"
+        ]
+      }
+    },
+    "buttons": {
+      "back": "वापस",
+      "next": "अगला",
+      "done": "हो गया",
+      "close": "बंद करें"
+    }
+  },
   "signIn": {
     "heroEyebrow": "Join the pack",
     "heroHeadline": "Lead your dog to victory",
