--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -316,6 +316,76 @@
   "navMyDog": "マイ ドッグ",
   "doghousesTitle": "犬小屋",
   "navProfile": "プロフィール",
+  "walkthrough": {
+    "ui": {
+      "levelUp": "レベルアップ！",
+      "plusOneSkillPoint": "+1スキルポイント",
+      "place": "配置",
+      "healX3": "回復×3",
+      "attackX3": "攻撃×3",
+      "addDoghouse": "犬小屋を追加",
+      "energyUsedAttackHeal": "攻撃に使用したエネルギー-2 • 回復に-1",
+      "energyPerDay": "所有する犬小屋1つにつき毎日+1エネルギー",
+      "questPlaceDoghouse": "犬小屋を1つ配置する",
+      "questAttackEnemy": "敵の犬小屋を攻撃する",
+      "questHealOwn": "自分の犬小屋を回復する",
+      "premiumTitle": "プレミアム",
+      "premiumFeatures": "プレミアム犬のアイコン • 無制限の名前変更",
+      "buy": "購入",
+      "extraDoghouse": "追加の犬小屋",
+      "renameToken": "名前変更トークン",
+      "repairPack": "修理パック",
+      "snacks": "スナック"
+    },
+    "steps": {
+      "gainingExperience": {
+        "title": "XPを獲得する",
+        "desc": "自分の犬小屋を配置し、敵の犬小屋を攻撃してXPを獲得します。レベルアップして犬を強くしましょう。",
+        "hint": "最良の結果を得るには、GPSをオンにしてください。犬小屋は他の犬小屋から離して配置してください。",
+        "howto": [
+          "犬小屋のアイコンをタップして、現在地に犬小屋を配置します。",
+          "敵の犬小屋をタップして攻撃します。",
+          "自分の犬小屋をタップして回復します。",
+          "レベルアップしたら、報酬を受け取り、犬のビューでスキルポイントを割り当てます。"
+        ]
+      },
+      "energyMechanics": {
+        "title": "エネルギー",
+        "desc": "攻撃と回復にはエネルギーが必要です。エネルギーは毎日補充され、所有する犬小屋が多いほど、より多くのエネルギーを得られます。",
+        "hint": "犬小屋が多いほどエネルギーも増えます。賢く使いましょう。",
+        "howto": [
+          "右上隅でエネルギーを確認できます。",
+          "攻撃と回復の両方でエネルギーを消費します。",
+          "毎日より多くのエネルギーを得るために、より多くの犬小屋を建てましょう。"
+        ]
+      },
+      "dailyQuests": {
+        "title": "クエストとリーダーボード",
+        "desc": "毎日のクエストを完了して報酬を獲得しましょう。リーダーボードを駆け上がり、他のプレイヤーと自分のランキングを比較しましょう。",
+        "hint": "毎日ログインしてクエストをこなし、ランクを維持しましょう。",
+        "howto": [
+          "[デイリークエスト]タブに移動して、タスクを確認し、報酬を受け取ります。",
+          "[リーダーボード]に移動して、自分のランキングを確認します。"
+        ]
+      },
+      "premiumShop": {
+        "title": "プレミアムとショップ",
+        "desc": "プレミアムでは、クールな犬のアイコンと無制限の名前変更が利用できます。ショップでは、スナックを使って、より多くの犬小屋、名前変更、修理を購入できます。",
+        "hint": "プレミアムは見た目のため、スナックはより速く進むのに役立ちます。",
+        "howto": [
+          "ショップにアクセスして、販売されているものを確認します。",
+          "限定アイコンと無制限の名前変更を利用するには、プレミアムを購入してください。",
+          "より多くの犬小屋、名前変更、修理を入手するには、スナックを購入してください。"
+        ]
+      }
+    },
+    "buttons": {
+      "back": "戻る",
+      "next": "次へ",
+      "done": "完了",
+      "close": "閉じる"
+    }
+  },
   "signIn": {
     "heroEyebrow": "Join the pack",
     "heroHeadline": "Lead your dog to victory",
