--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -312,6 +312,76 @@
   "navMyDog": "Моя собака",
   "doghousesTitle": "Собачьи будки",
   "navProfile": "Профиль",
+  "walkthrough": {
+    "ui": {
+      "levelUp": "Уровень повышен!",
+      "plusOneSkillPoint": "+1 очко навыков",
+      "place": "Разместить",
+      "healX3": "Исцелить ×3",
+      "attackX3": "Атаковать ×3",
+      "addDoghouse": "Добавить будку",
+      "energyUsedAttackHeal": "-2 энергии на атаку • -1 на исцеление",
+      "energyPerDay": "+1 энергия/день за каждую вашу будку",
+      "questPlaceDoghouse": "Разместите 1 будку",
+      "questAttackEnemy": "Атакуйте вражескую будку",
+      "questHealOwn": "Исцелите свою будку",
+      "premiumTitle": "Премиум",
+      "premiumFeatures": "Премиум-иконки собак • Неограниченное количество переименований",
+      "buy": "Купить",
+      "extraDoghouse": "Дополнительная будка",
+      "renameToken": "Жетон переименования",
+      "repairPack": "Ремонтный комплект",
+      "snacks": "Снеки"
+    },
+    "steps": {
+      "gainingExperience": {
+        "title": "Получение опыта",
+        "desc": "Размещайте свои будки и атакуйте вражеские, чтобы получить опыт. Повышайте уровень, чтобы сделать свою собаку сильнее.",
+        "hint": "Для достижения наилучших результатов включите GPS. Размещайте будки подальше от других.",
+        "howto": [
+          "Нажмите на значок будки, чтобы разместить ее там, где вы находитесь.",
+          "Нажмите на вражескую будку, чтобы атаковать ее.",
+          "Нажмите на свою будку, чтобы исцелить ее.",
+          "После повышения уровня заберите свои награды и распределите очки навыков в представлении «Собака»."
+        ]
+      },
+      "energyMechanics": {
+        "title": "Энергия",
+        "desc": "Вам нужна энергия для атаки и исцеления. Ваша энергия пополняется каждый день, и чем больше у вас будок, тем больше энергии вы получаете.",
+        "hint": "Больше будок = больше энергии. Используйте ее с умом.",
+        "howto": [
+          "Смотрите свою энергию в правом верхнем углу.",
+          "Атака и исцеление расходуют энергию.",
+          "Стройте больше будок, чтобы получать больше энергии каждый день."
+        ]
+      },
+      "dailyQuests": {
+        "title": "Квесты и таблицы лидеров",
+        "desc": "Выполняйте ежедневные квесты, чтобы получать награды. Поднимайтесь в таблицах лидеров и смотрите, как вы выглядите на фоне других игроков.",
+        "hint": "Заходите в игру каждый день, чтобы выполнять квесты и поддерживать свой ранг.",
+        "howto": [
+          "Перейдите на вкладку «Ежедневные квесты», чтобы увидеть свои задания и получить награды.",
+          "Перейдите в «Таблицы лидеров», чтобы увидеть свой ранг."
+        ]
+      },
+      "premiumShop": {
+        "title": "Премиум и магазин",
+        "desc": "С Премиум вы получаете крутые иконки собак и неограниченное количество переименований. В Магазине вы можете использовать Снеки, чтобы покупать больше будок, переименований и ремонтов.",
+        "hint": "Премиум — для стиля, а Снеки помогают вам быстрее прогрессировать.",
+        "howto": [
+          "Зайдите в Магазин, чтобы увидеть, что продается.",
+          "Купите Премиум, чтобы получить эксклюзивные иконки и неограниченное количество переименований.",
+          "Покупайте Снеки, чтобы получить больше будок, переименований и ремонтов."
+        ]
+      }
+    },
+    "buttons": {
+      "back": "Назад",
+      "next": "Далее",
+      "done": "Готово",
+      "close": "Закрыть"
+    }
+  },
   "signIn": {
     "heroEyebrow": "Join the pack",
     "heroHeadline": "Lead your dog to victory",
