--- a/src/i18n/ur.json
+++ b/src/i18n/ur.json
@@ -312,6 +312,76 @@
   "navMyDog": "میرا کتا",
   "doghousesTitle": "کتے کے گھر",
   "navProfile": "پروفائل",
+  "walkthrough": {
+    "ui": {
+      "levelUp": "لیول اپ!",
+      "plusOneSkillPoint": "+1 مہارت پوائنٹ",
+      "place": "جگہ",
+      "healX3": "ٹھیک ×3",
+      "attackX3": "حملہ ×3",
+      "addDoghouse": "کتے کا گھر شامل کریں",
+      "energyUsedAttackHeal": "حملہ کے لیے -2 توانائی استعمال ہوئی • ٹھیک کرنے کے لیے -1",
+      "energyPerDay": "آپ کے ہر کتے کے گھر کے لیے روزانہ +1 توانائی",
+      "questPlaceDoghouse": "1 کتے کا گھر رکھیں",
+      "questAttackEnemy": "دشمن کے کتے کے گھر پر حملہ کریں",
+      "questHealOwn": "اپنے کتے کے گھر کو ٹھیک کریں",
+      "premiumTitle": "پریمیم",
+      "premiumFeatures": "پریمیم کتے کے آئیکنز • لامحدود نام کی تبدیلیاں",
+      "buy": "خریدیں",
+      "extraDoghouse": "اضافی کتے کا گھر",
+      "renameToken": "نام تبدیل کرنے کا ٹوکن",
+      "repairPack": "مرمت کا پیک",
+      "snacks": "اسنیکس"
+    },
+    "steps": {
+      "gainingExperience": {
+        "title": "XP حاصل کرنا",
+        "desc": "XP حاصل کرنے کے لیے اپنے کتے کے گھر رکھیں اور دشمن کے گھروں پر حملہ کریں۔ اپنے کتے کو مضبوط بنانے کے لیے لیول اپ کریں۔",
+        "hint": "بہترین نتائج کے لیے، اپنا GPS آن کریں۔ کتے کے گھروں کو دوسروں سے دور رکھیں۔",
+        "howto": [
+          "جہاں آپ ہیں وہاں ایک کتے کا گھر رکھنے کے لیے کتے کے گھر کے آئیکن پر ٹیپ کریں۔",
+          "دشمن کے کتے کے گھر پر حملہ کرنے کے لیے اس پر ٹیپ کریں۔",
+          "اسے ٹھیک کرنے کے لیے اپنے کتے کے گھر پر ٹیپ کریں۔",
+          "جب آپ لیول اپ کریں، تو اپنے انعامات کا دعوی کریں اور کتے کے منظر میں مہارت کے پوائنٹس تفویض کریں۔"
+        ]
+      },
+      "energyMechanics": {
+        "title": "توانائی",
+        "desc": "حملہ کرنے اور ٹھیک کرنے کے لیے آپ کو توانائی کی ضرورت ہے۔ آپ کی توانائی ہر روز دوبارہ بھرتی ہے، اور آپ کے پاس جتنے زیادہ کتے کے گھر ہوں گے، اتنی ہی زیادہ توانائی آپ کو ملے گی۔",
+        "hint": "زیادہ کتے کے گھر = زیادہ توانائی۔ اسے سمجھداری سے استعمال کریں۔",
+        "howto": [
+          "اوپری دائیں کونے میں اپنی توانائی دیکھیں۔",
+          "حملہ اور شفا دونوں توانائی استعمال کرتے ہیں۔",
+          "ہر روز زیادہ توانائی حاصل کرنے کے لیے مزید کتے کے گھر بنائیں۔"
+        ]
+      },
+      "dailyQuests": {
+        "title": "کویسٹس اور لیڈر بورڈز",
+        "desc": "انعامات حاصل کرنے کے لیے روزانہ کی تلاشیں مکمل کریں۔ لیڈر بورڈ پر چڑھیں اور دیکھیں کہ آپ دوسرے کھلاڑیوں کے مقابلے میں کہاں کھڑے ہیں۔",
+        "hint": "اپنی تلاشیں کرنے اور اپنی درجہ بندی برقرار رکھنے کے لیے ہر روز لاگ ان کریں۔",
+        "howto": [
+          "اپنے کام دیکھنے اور اپنے انعامات حاصل کرنے کے لیے روزانہ کی تلاش کے ٹیب پر جائیں۔",
+          "یہ دیکھنے کے لیے لیڈر بورڈز پر جائیں کہ آپ کہاں درجہ بندی کرتے ہیں۔"
+        ]
+      },
+      "premiumShop": {
+        "title": "پریمیم اور دکان",
+        "desc": "پریمیم کے ساتھ، آپ کو ٹھنڈے کتے کے آئیکنز اور لامحدود نام کی تبدیلیاں ملتی ہیں۔ دکان میں، آپ مزید کتے کے گھر، نام کی تبدیلیاں اور مرمت خریدنے کے لیے اسنیکس کا استعمال کر سکتے ہیں۔",
+        "hint": "پریمیم ظاہری شکل کے لیے ہے، اور اسنیکس آپ کو تیزی سے ترقی کرنے میں مدد کرتے ہیں۔",
+        "howto": [
+          "فروخت کے لیے کیا ہے یہ دیکھنے کے لیے دکان پر جائیں۔",
+          "خصوصی آئیکنز اور لامحدود نام کی تبدیلیاں حاصل کرنے کے لیے پریمیم خریدیں۔",
+          "مزید کتے کے گھر، نام کی تبدیلیاں اور مرمت حاصل کرنے کے لیے اسنیکس خریدیں۔"
+        ]
+      }
+    },
+    "buttons": {
+      "back": "پیچھے",
+      "next": "آگے",
+      "done": "ہو گیا",
+      "close": "بند کریں"
+    }
+  },
   "signIn": {
     "heroEyebrow": "Join the pack",
     "heroHeadline": "Lead your dog to victory",
